--- a/HexMap/HexMap.csproj
+++ b/HexMap/HexMap.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RoundMap.cs" />
     <Compile Include="SquareMap.cs" />
     <Compile Include="Vectors.cs" />
     <Compile Include="Hex.cs" />
