- Rename HexCircleManager to HexCircle - Some bug fixes

--- a/HexMap/HexMap.csproj
+++ b/HexMap/HexMap.csproj
@@ -63,7 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HexCircleManager.cs" />
+    <Compile Include="HexCircle.cs" />
     <Compile Include="RoundMap.cs" />
     <Compile Include="SquareMap.cs" />
     <Compile Include="Vectors.cs" />
